--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="frame">
         <!-- ELEMENTS -->
         <div class="answers">
-          <p class="answ answers-label">🏆 სწორი პასუსები:</p>
+          <p class="answ answers-label">🏆 სწორი პასუხები:</p>
           <p class="answ answers-value">0</p>
         </div>
         <button class="btn btn-new">
